--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="home-theme.css" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="../favicon.ico" /><title>Contact</title><h3>Contact</h3>
-<p>Email: contact@example.com<br>Fax: ????</p><a href="./index.html">Go Back Home</a>
+<link rel="icon" type="image/x-icon" href="favicon.ico" /><title>Contact</title><h3>Contact</h3>
+<p>Email: contact@example.com<br>discord: Example#1111</p><p>Twiter: @Example</p><a href="./index.html">Go Back Home</a>
