--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p>Welcome to the home of simple python website maker.</p>
     <h3>How to install</h3>
     <p>Clone Repo - <b>git clone https://github.com/Dunn-Dev8/Webmkr.py</b></p>
+    <h3>News:</h3>
+    <p>at the moment Webmkr.py is being ported to ruby. This will not mean anything for sites hosted with webmkr.py, and will make development of the website maker alot easier. </p>
+    
     <br>
     <a href="./posts/index.html">View Blog Contents</a>
     <br>
