--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
     <h3>Webmkr.py 0.3:2022</h3>
     <p>Welcome to the home of simple python website maker.</p>
-    <h3>How to install</h3>
+    <h3>How to install stable</h3>
     <p>Clone Repo - <b>git clone https://github.com/Dunn-Dev8/Webmkr.py</b></p>
     <h3>News:</h3>
-    <p>at the moment Webmkr.py is being ported to ruby. This will not mean anything for sites hosted with webmkr.py, and will make development of the website maker alot easier. </p>
-    
+    <p>Now their is a Development branch for webmkr and a stable branch</p>    
     <br>
     <a href="./posts/index.html">View Blog Contents</a>
     <br>
