--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
     <h3>Webmkr.py 0.3:2022</h3>
     <p>Welcome to the home of simple python website maker.</p>
-    <h3>How to install stable</h3>
+    <h3>How to install</h3>
     <p>Clone Repo - <b>git clone https://github.com/Dunn-Dev8/Webmkr.py</b></p>
-    <h3>News:</h3>
-    <p>Now their is a Development branch for webmkr and a stable branch</p>    
     <br>
     <a href="./posts/index.html">View Blog Contents</a>
     <br>
